JavaScript module file should use .mjs extension

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     </div>
 
     <!-- code logic -->
-    <script type="module" src="logic.js"></script>
+    <script type="module" src="logic.mjs"></script>
 </body>
 
 </html>
