Drop down for enemy team completely disabled.

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
                                 <option value="4">4</option>
                             </select>
                             <!-- Dropdown for guess of enemy team -->
-                            <select id="guessOthers1">
+                            <select id="guessOthers1" disabled>
                                 <option value="">?</option>
-                                <option value="1" disabled>1</option>
-                                <option value="2" disabled>2</option>
-                                <option value="3" disabled>3</option>
-                                <option value="4" disabled>4</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
                             </select>
                         </div>
                         <!-- 2nd line of the 3-digit code -->
@@ -127,12 +127,12 @@
                                 <option value="4">4</option>
                             </select>
                             <!-- Dropdown for guess of enemy team -->
-                            <select id="guessOthers2">
+                            <select id="guessOthers2" disabled>
                                 <option value="">?</option>
-                                <option value="1" disabled>1</option>
-                                <option value="2" disabled>2</option>
-                                <option value="3" disabled>3</option>
-                                <option value="4" disabled>4</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
                             </select>
                         </div>
                         <!-- 3rd line of the 3-digit code -->
@@ -147,12 +147,12 @@
                                 <option value="4">4</option>
                             </select>
                             <!-- Dropdown for guess of enemy team -->
-                            <select id="guessOthers2">
+                            <select id="guessOthers2" disabled>
                                 <option value="">?</option>
-                                <option value="1" disabled>1</option>
-                                <option value="2" disabled>2</option>
-                                <option value="3" disabled>3</option>
-                                <option value="4" disabled>4</option>
+                                <option value="1">1</option>
+                                <option value="2">2</option>
+                                <option value="3">3</option>
+                                <option value="4">4</option>
                             </select>
                         </div>
                         <!-- Button to submit -->
