--- a/index.html
+++ b/index.html
@@ -39,25 +39,25 @@
                 <section class="columns">
                     <div class="column-25">
                         <div class="panel">
-                            <h1 class="panel-head">{{ myTeam.keywords[0] }}</h1>
+                            <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[0] }}</h1>
                             <p class="panel-block" v-for="code in myTeam.word1.hints">{{ code }}</p>
                         </div>
                     </div>
                     <div class="column-25">
                         <div class="panel">
-                            <h1 class="panel-head">{{ myTeam.keywords[1] }}</h1>
+                            <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[1] }}</h1>
                             <p class="panel-block" v-for="code in myTeam.word2.hints">{{ code }}</p>
                         </div>
                     </div>
                     <div class="column-25">
                         <div class="panel">
-                            <h1 class="panel-head">{{ myTeam.keywords[2] }}</h1>
+                            <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[2] }}</h1>
                             <p class="panel-block" v-for="code in myTeam.word3.hints">{{ code }}</p>
                         </div>
                     </div>
                     <div class="column-25">
                         <div class="panel">
-                            <h1 class="panel-head">{{ myTeam.keywords[3] }}</h1>
+                            <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[3] }}</h1>
                             <p class="panel-block" v-for="code in myTeam.word4.hints">{{ code }}</p>
                         </div>
                     </div>
@@ -86,7 +86,7 @@
                 <div class="column-25">
                     <div class="panel">
                         <!-- Current 3-digit code -->
-                        <h1 class="panel-head">
+                        <h1 class="panel-head" :class="teamFillClass">
                             <div class="code">
                                 <span>{{ myTeam.code[0] }}</span>
                                 <span>{{ myTeam.code[1] }}</span>
@@ -95,11 +95,12 @@
                         </h1>
                         <!-- 1st line of the 3-digit code -->
                         <div class="panel-block">
-                            <input type="text" id="hint1" :placeholder="myTeam.keywords[myTeam.code[0] - 1]">
+                            <input type="text" :class="teamBorderClass" id="hint1"
+                                :placeholder="myTeam.keywords[myTeam.code[0] - 1]">
                             <!-- <input type="number" id="guess1" min="1" max="4">
                             <input type="number" id="guessOthers1" min="1" max="4"> -->
                             <!-- Dropdown for guess of own team -->
-                            <select id="guess1">
+                            <select id="guess1" :class="teamFillActionClass">
                                 <option value="">&#9660</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -117,9 +118,10 @@
                         </div>
                         <!-- 2nd line of the 3-digit code -->
                         <div class="panel-block">
-                            <input type="text" id="hint2" :placeholder="myTeam.keywords[myTeam.code[1] - 1]">
+                            <input type="text" :class="teamBorderClass" id="hint2"
+                                :placeholder="myTeam.keywords[myTeam.code[1] - 1]">
                             <!-- Dropdown for guess of own team -->
-                            <select id="guess2">
+                            <select id="guess2" :class="teamFillActionClass">
                                 <option value="">&#9660</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -137,9 +139,10 @@
                         </div>
                         <!-- 3rd line of the 3-digit code -->
                         <div class="panel-block">
-                            <input type="text" id="hint3" :placeholder="myTeam.keywords[myTeam.code[2] - 1]">
+                            <input type="text" :class="teamBorderClass" id="hint3"
+                                :placeholder="myTeam.keywords[myTeam.code[2] - 1]">
                             <!-- Dropdown for guess of own team -->
-                            <select id="guess3">
+                            <select id="guess3" :class="teamFillActionClass">
                                 <option value="">&#9660</option>
                                 <option value="1">1</option>
                                 <option value="2">2</option>
@@ -157,7 +160,7 @@
                         </div>
                         <!-- Button to submit -->
                         <div class="panel-block">
-                            <input type="button" class="button-submit" value="Submit">
+                            <input type="button" class="button-submit" :class="teamFillActionClass" value="Submit">
                         </div>
                     </div>
                 </div>
