--- a/index.html
+++ b/index.html
@@ -16,158 +16,164 @@
     <noscript>JavaScript is needed. Please enable JavaScript for this page in your browser.</noscript>
 
     <!-- ui template -->
-    <h1 class="center">Team A</h1>
-    <div id="app" class="columns p-6">
-        <!-- Left section containing the team information -->
-        <aside class="column-15">
-            <h1 class="title">Teams</h1>
-            <p class="menu-label">Blue:</p>
-            <ul class="menu-list">
-                <li v-for="player in team1.players">{{ player }} 🧑</li>
-            </ul>
-            <p class="menu-label">Red:</p>
-            <ul class="menu-list">
-                <li v-for="player in team2.players">{{ player }} 🔑</li>
-            </ul>
-            <br>
-            <h1 class="title">Status</h1>
-            <p class="menu-label">Round: {{ round }}</p>
-        </aside>
-        <!-- Middle section containing the code words -->
-        <main class="column-70" style="border-left: 1px solid #36363640; border-right: 1px solid #36363640;">
-            <article>
-                <section class="columns">
-                    <div class="column-25">
-                        <div class="panel">
-                            <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[0] }}</h1>
-                            <p class="panel-block" v-for="code in myTeam.word1.hints">{{ code }}</p>
-                        </div>
-                    </div>
-                    <div class="column-25">
-                        <div class="panel">
-                            <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[1] }}</h1>
-                            <p class="panel-block" v-for="code in myTeam.word2.hints">{{ code }}</p>
-                        </div>
-                    </div>
-                    <div class="column-25">
-                        <div class="panel">
-                            <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[2] }}</h1>
-                            <p class="panel-block" v-for="code in myTeam.word3.hints">{{ code }}</p>
-                        </div>
-                    </div>
-                    <div class="column-25">
-                        <div class="panel">
-                            <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[3] }}</h1>
-                            <p class="panel-block" v-for="code in myTeam.word4.hints">{{ code }}</p>
-                        </div>
-                    </div>
-                </section>
-                <footer class="columns footer">
-                    <div class="column-50 center">
-                        <p>Wrong guesses of the own team:</p><span id="wrong-self-1">X</span><span
-                            id="wrong-self-2">O</span>
-                    </div>
-                    <div class="column-50 center">
-                        <p>Correct guesses of the enemy team:</p><span id="correct-others-1">O</span><span
-                            id="correct-others-2">O</span>
-                    </div>
-                </footer>
-            </article>
-            <nav class="tabs center">
-                <ul>
-                    <li class="is-active"><a id="team-select-a" href="#">Team A</a></li>
-                    <li><a id="team-select-b" href="#">Team B</a></li>
+    <div id="app">
+        <h1 class="center">{{ myTeam.name }}</h1>
+        <div class="columns p-6">
+            <!-- Left section containing the team information -->
+            <aside class="column-15">
+                <h1 class="title">Teams</h1>
+                <p class="menu-label">{{ team1.name }}:</p>
+                <ul class="menu-list">
+                    <li v-for="player in team1.players">{{ player }} 🧑</li>
                 </ul>
-            </nav>
-        </main>
-        <!-- Right section containing the current code and its hints -->
-        <section class="column-15">
-            <div class="columns">
-                <div class="column-25">
-                    <div class="panel">
-                        <!-- Current 3-digit code -->
-                        <h1 class="panel-head" :class="teamFillClass">
-                            <div class="code">
-                                <span>{{ myTeam.code[0] }}</span>
-                                <span>{{ myTeam.code[1] }}</span>
-                                <span>{{ myTeam.code[2] }}</span>
+                <p class="menu-label">{{ team2.name }}:</p>
+                <ul class="menu-list">
+                    <li v-for="player in team2.players">{{ player }} 🔑</li>
+                </ul>
+                <br>
+                <h1 class="title">Status</h1>
+                <p class="menu-label">Round: {{ round }}</p>
+            </aside>
+            <!-- Middle section containing the code words -->
+            <main class="column-70" style="border-left: 1px solid #36363640; border-right: 1px solid #36363640;">
+                <article>
+                    <section class="columns">
+                        <div class="column-25">
+                            <div class="panel">
+                                <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[0] }}</h1>
+                                <p class="panel-block" v-for="code in myTeam.word1.hints">{{ code }}</p>
                             </div>
-                        </h1>
-                        <!-- 1st line of the 3-digit code -->
-                        <div class="panel-block">
-                            <input type="text" :class="teamBorderClass" id="hint1"
-                                :placeholder="myTeam.keywords[myTeam.code[0] - 1]">
-                            <!-- <input type="number" id="guess1" min="1" max="4">
+                        </div>
+                        <div class="column-25">
+                            <div class="panel">
+                                <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[1] }}</h1>
+                                <p class="panel-block" v-for="code in myTeam.word2.hints">{{ code }}</p>
+                            </div>
+                        </div>
+                        <div class="column-25">
+                            <div class="panel">
+                                <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[2] }}</h1>
+                                <p class="panel-block" v-for="code in myTeam.word3.hints">{{ code }}</p>
+                            </div>
+                        </div>
+                        <div class="column-25">
+                            <div class="panel">
+                                <h1 class="panel-head" :class="teamFillClass">{{ myTeam.keywords[3] }}</h1>
+                                <p class="panel-block" v-for="code in myTeam.word4.hints">{{ code }}</p>
+                            </div>
+                        </div>
+                    </section>
+                    <footer class="columns footer">
+                        <div class="column-50 center">
+                            <p>Wrong guesses of the own team:</p><span id="wrong-self-1">X</span><span
+                                id="wrong-self-2">O</span>
+                        </div>
+                        <div class="column-50 center">
+                            <p>Correct guesses of the enemy team:</p><span id="correct-others-1">O</span><span
+                                id="correct-others-2">O</span>
+                        </div>
+                    </footer>
+                </article>
+                <nav class="tabs center">
+                    <ul>
+                        <li :class="{'is-active': myTeamId == 1}"><a class="team1-fill-action" id="team-select-a"
+                                @click="moveToTeam1">{{ team1.name }}</a>
+                        </li>
+                        <li :class="{'is-active': myTeamId == 2}"><a class="team2-fill-action" id="team-select-a"
+                                @click="moveToTeam2">{{ team2.name }}</a>
+                        </li>
+                    </ul>
+                </nav>
+            </main>
+            <!-- Right section containing the current code and its hints -->
+            <section class="column-15">
+                <div class="columns">
+                    <div class="column-25">
+                        <div class="panel">
+                            <!-- Current 3-digit code -->
+                            <h1 class="panel-head" :class="teamFillClass">
+                                <div class="code">
+                                    <span>{{ myTeam.code[0] }}</span>
+                                    <span>{{ myTeam.code[1] }}</span>
+                                    <span>{{ myTeam.code[2] }}</span>
+                                </div>
+                            </h1>
+                            <!-- 1st line of the 3-digit code -->
+                            <div class="panel-block">
+                                <input type="text" :class="teamBorderClass" id="hint1"
+                                    :placeholder="myTeam.keywords[myTeam.code[0] - 1]">
+                                <!-- <input type="number" id="guess1" min="1" max="4">
                             <input type="number" id="guessOthers1" min="1" max="4"> -->
-                            <!-- Dropdown for guess of own team -->
-                            <select id="guess1" :class="teamFillActionClass">
-                                <option value="">&#9660</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                            </select>
-                            <!-- Dropdown for guess of enemy team -->
-                            <select id="guessOthers1" disabled>
-                                <option value="">?</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                            </select>
-                        </div>
-                        <!-- 2nd line of the 3-digit code -->
-                        <div class="panel-block">
-                            <input type="text" :class="teamBorderClass" id="hint2"
-                                :placeholder="myTeam.keywords[myTeam.code[1] - 1]">
-                            <!-- Dropdown for guess of own team -->
-                            <select id="guess2" :class="teamFillActionClass">
-                                <option value="">&#9660</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                            </select>
-                            <!-- Dropdown for guess of enemy team -->
-                            <select id="guessOthers2" disabled>
-                                <option value="">?</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                            </select>
-                        </div>
-                        <!-- 3rd line of the 3-digit code -->
-                        <div class="panel-block">
-                            <input type="text" :class="teamBorderClass" id="hint3"
-                                :placeholder="myTeam.keywords[myTeam.code[2] - 1]">
-                            <!-- Dropdown for guess of own team -->
-                            <select id="guess3" :class="teamFillActionClass">
-                                <option value="">&#9660</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                            </select>
-                            <!-- Dropdown for guess of enemy team -->
-                            <select id="guessOthers2" disabled>
-                                <option value="">?</option>
-                                <option value="1">1</option>
-                                <option value="2">2</option>
-                                <option value="3">3</option>
-                                <option value="4">4</option>
-                            </select>
-                        </div>
-                        <!-- Button to submit -->
-                        <div class="panel-block">
-                            <input type="button" class="button-submit" :class="teamFillActionClass" value="Submit">
+                                <!-- Dropdown for guess of own team -->
+                                <select id="guess1" :class="teamFillActionClass">
+                                    <option value="">&#9660</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                                <!-- Dropdown for guess of enemy team -->
+                                <select id="guessOthers1" :class="teamFillActionClass" disabled>
+                                    <option value="">?</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                            </div>
+                            <!-- 2nd line of the 3-digit code -->
+                            <div class="panel-block">
+                                <input type="text" :class="teamBorderClass" id="hint2"
+                                    :placeholder="myTeam.keywords[myTeam.code[1] - 1]">
+                                <!-- Dropdown for guess of own team -->
+                                <select id="guess2" :class="teamFillActionClass">
+                                    <option value="">&#9660</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                                <!-- Dropdown for guess of enemy team -->
+                                <select id="guessOthers2" :class="teamFillActionClass" disabled>
+                                    <option value="">?</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                            </div>
+                            <!-- 3rd line of the 3-digit code -->
+                            <div class="panel-block">
+                                <input type="text" :class="teamBorderClass" id="hint3"
+                                    :placeholder="myTeam.keywords[myTeam.code[2] - 1]">
+                                <!-- Dropdown for guess of own team -->
+                                <select id="guess3" :class="teamFillActionClass">
+                                    <option value="">&#9660</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                                <!-- Dropdown for guess of enemy team -->
+                                <select id="guessOthers2" :class="teamFillActionClass" disabled>
+                                    <option value="">?</option>
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                    <option value="4">4</option>
+                                </select>
+                            </div>
+                            <!-- Button to submit -->
+                            <div class="panel-block">
+                                <input type="button" class="button-submit" :class="teamFillActionClass" value="Submit">
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
 
-        </section>
+            </section>
+        </div>
     </div>
 
     <!-- code logic -->
