socket.io getting started

--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@
 
     <!-- code logic -->
     <script type="module" src="logic.mjs"></script>
+    <!-- networking code -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io();
+    </script>
 </body>
 
 </html>
