--- a/index.html
+++ b/index.html
@@ -93,15 +93,15 @@
                             <!-- Current 3-digit code -->
                             <h1 class="panel-head" :class="teamFillClass">
                                 <div class="code">
-                                    <span>{{ myTeam.code[0] }}</span>
-                                    <span>{{ myTeam.code[1] }}</span>
-                                    <span>{{ myTeam.code[2] }}</span>
+                                    <span>{{ myTeam.code.value[0] }}</span>
+                                    <span>{{ myTeam.code.value[1] }}</span>
+                                    <span>{{ myTeam.code.value[2] }}</span>
                                 </div>
                             </h1>
                             <!-- 1st line of the 3-digit code -->
                             <div class="panel-block">
                                 <input type="text" :class="teamBorderClass" id="hint1"
-                                    :placeholder="'Encrypt &quot' + myTeam.keywords[myTeam.code[0] - 1] + '&quot'">
+                                    :placeholder="'Encrypt &quot' + myTeam.keywords[myTeam.code.value[0] - 1] + '&quot'">
                                 <!-- Dropdown for guess of own team -->
                                 <select id="guess1" :class="teamFillActionClass">
                                     <option value="">&#9660</option>
@@ -122,7 +122,7 @@
                             <!-- 2nd line of the 3-digit code -->
                             <div class="panel-block">
                                 <input type="text" :class="teamBorderClass" id="hint2"
-                                    :placeholder="'Encrypt &quot' + myTeam.keywords[myTeam.code[1] - 1] + '&quot'">
+                                    :placeholder="'Encrypt &quot' + myTeam.keywords[myTeam.code.value[1] - 1] + '&quot'">
                                 <!-- Dropdown for guess of own team -->
                                 <select id="guess2" :class="teamFillActionClass">
                                     <option value="">&#9660</option>
@@ -143,7 +143,7 @@
                             <!-- 3rd line of the 3-digit code -->
                             <div class="panel-block">
                                 <input type="text" :class="teamBorderClass" id="hint3"
-                                    :placeholder="'Encrypt &quot' + myTeam.keywords[myTeam.code[2] - 1] + '&quot'">
+                                    :placeholder="'Encrypt &quot' + myTeam.keywords[myTeam.code.value[2] - 1] + '&quot'">
                                 <!-- Dropdown for guess of own team -->
                                 <select id="guess3" :class="teamFillActionClass">
                                     <option value="">&#9660</option>
