--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                             <!-- 1st line of the 3-digit code -->
                             <div class="panel-block">
                                 <input type="text" :class="teamBorderClass" id="hint1"
-                                    :placeholder="'Encrypt &quot' + myTeam.keywords[myTeam.code.value[0] - 1] + '&quot'">
+                                    :placeholder="`Encrypt &quot${myTeam.keywords[myTeam.code.value[0] - 1]}&quot`">
                                 <!-- Dropdown for guess of own team -->
                                 <select id="guess1" :class="teamFillActionClass">
                                     <option value="">&#9660</option>
@@ -122,7 +122,7 @@
                             <!-- 2nd line of the 3-digit code -->
                             <div class="panel-block">
                                 <input type="text" :class="teamBorderClass" id="hint2"
-                                    :placeholder="'Encrypt &quot' + myTeam.keywords[myTeam.code.value[1] - 1] + '&quot'">
+                                    :placeholder="`Encrypt &quot${myTeam.keywords[myTeam.code.value[1] - 1]}&quot`">
                                 <!-- Dropdown for guess of own team -->
                                 <select id="guess2" :class="teamFillActionClass">
                                     <option value="">&#9660</option>
@@ -143,7 +143,7 @@
                             <!-- 3rd line of the 3-digit code -->
                             <div class="panel-block">
                                 <input type="text" :class="teamBorderClass" id="hint3"
-                                    :placeholder="'Encrypt &quot' + myTeam.keywords[myTeam.code.value[2] - 1] + '&quot'">
+                                    :placeholder="`Encrypt &quot${myTeam.keywords[myTeam.code.value[2] - 1]}&quot`">
                                 <!-- Dropdown for guess of own team -->
                                 <select id="guess3" :class="teamFillActionClass">
                                     <option value="">&#9660</option>
