--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             </h1>
                             <!-- 1st line of the 3-digit code -->
                             <div class="panel-block">
-                                <input type="text" :class="teamBorderClass" id="hint1"
+                                <input type="text" v-model.trim="visibleHints[0]" :class="teamBorderClass" id="hint1"
                                     :placeholder="hintPlaceholder[0]">
                                 <!-- Dropdown for guess of own team -->
                                 <select id="guess1" :class="teamFillActionClass">
@@ -121,7 +121,7 @@
                             </div>
                             <!-- 2nd line of the 3-digit code -->
                             <div class="panel-block">
-                                <input type="text" :class="teamBorderClass" id="hint2"
+                                <input type="text" v-model.trim="visibleHints[1]" :class="teamBorderClass" id="hint2"
                                     :placeholder="hintPlaceholder[1]">
                                 <!-- Dropdown for guess of own team -->
                                 <select id="guess2" :class="teamFillActionClass">
@@ -142,7 +142,7 @@
                             </div>
                             <!-- 3rd line of the 3-digit code -->
                             <div class="panel-block">
-                                <input type="text" :class="teamBorderClass" id="hint3"
+                                <input type="text" v-model.trim="visibleHints[2]" :class="teamBorderClass" id="hint3"
                                     :placeholder="hintPlaceholder[2]">
                                 <!-- Dropdown for guess of own team -->
                                 <select id="guess3" :class="teamFillActionClass">
@@ -163,7 +163,8 @@
                             </div>
                             <!-- Button to submit -->
                             <div class="panel-block">
-                                <input type="button" class="button-submit" :class="teamFillActionClass" value="Submit">
+                                <input type="button" @click="submit_hints" class="button-submit"
+                                    :class="teamFillActionClass" value="Submit">
                             </div>
                         </div>
                     </div>
