--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                 <input type="text" v-model.trim="visibleHints[0]" :class="teamBorderClass" id="hint1"
                                     :placeholder="hintPlaceholder[0]">
                                 <!-- Dropdown for guess of own team -->
-                                <select id="guess1" :class="teamFillActionClass">
+                                <select id="guess1" v-model="visibleGuess1" :class="teamFillActionClass">
                                     <option value="">&#9660</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -125,7 +125,7 @@
                                 <input type="text" v-model.trim="visibleHints[1]" :class="teamBorderClass" id="hint2"
                                     :placeholder="hintPlaceholder[1]">
                                 <!-- Dropdown for guess of own team -->
-                                <select id="guess2" :class="teamFillActionClass">
+                                <select id="guess2" v-model="visibleGuess2" :class="teamFillActionClass">
                                     <option value="">&#9660</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -146,7 +146,7 @@
                                 <input type="text" v-model.trim="visibleHints[2]" :class="teamBorderClass" id="hint3"
                                     :placeholder="hintPlaceholder[2]">
                                 <!-- Dropdown for guess of own team -->
-                                <select id="guess3" :class="teamFillActionClass">
+                                <select id="guess3" v-model="visibleGuess3" :class="teamFillActionClass">
                                     <option value="">&#9660</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -154,7 +154,7 @@
                                     <option value="4">4</option>
                                 </select>
                                 <!-- Dropdown for guess of enemy team -->
-                                <select id="guessOthers2" :class="teamFillActionClass" disabled>
+                                <select id="guessOthers3" :class="teamFillActionClass" disabled>
                                     <option value="">?</option>
                                     <option value="1">1</option>
                                     <option value="2">2</option>
@@ -164,8 +164,8 @@
                             </div>
                             <!-- Button to submit -->
                             <div class="panel-block">
-                                <input type="button" @click="submit_hints" class="button-submit"
-                                    :class="teamFillActionClass" value="Submit">
+                                <input type="button" @click="submit" class="button-submit" :class="teamFillActionClass"
+                                    value="Submit">
                             </div>
                         </div>
                     </div>
